# SDL_Saturn

./: .gitignore  CMakeLists.txt  README.md  SDL.h  build-all.sh
cmake/: FindSDL_Saturn.cmake
include/: SDL.h  SDL_getenv.h  SDL_log.h  SDL_rwops.h  SDL_saturn.h  SDL_types.h
src/: SDL.c  SDL_error.c  SDL_getenv.c  SDL_log.c  SDL_log_c.h  SDL_saturn.c
src/audio/: SDL_audio.c  SDL_audiomem.c  SDL_sysaudio.h  SDL_wave.c
src/cdrom/: SDL_cdrom.c
src/cdrom/saturn/: SDL_syscdrom.c
src/events/: SDL_events.c  SDL_keyboard.c  SDL_mouse.c  SDL_resize.c  SDL_sysevents.h
src/file/: SDL_rwops.c
src/file/saturn/: gfs_wrap.c  gfs_wrap.h
src/joystick/: SDL_joystick.c
src/joystick/saturn/: SDL_sysjoystick.c
src/thread/: SDL_thread.c  SDL_thread_c.h
src/thread/saturn/: SDL_syscond.c  SDL_sysmutex.c  SDL_systhread.c  SDL_systhread_c.h
src/timer/: SDL_systimer.h  SDL_timer.c
src/timer/saturn/: SDL_systimer.c
src/video/: SDL_RLEaccel.c  SDL_blit.h  SDL_blit_1.c  SDL_blit_A.c  SDL_bmp.c  SDL_cursor.c  SDL_gamma.c  SDL_pixels.c  SDL_surface.c  SDL_sysvideo.h  SDL_video.c
src/video/dummy/: SDL_nullvideo.c
src/video/saturn/: SDL_satevents.c  SDL_satevents_c.h  SDL_satmouse.c  SDL_satmouse_c.h  SDL_satvideo.c  SDL_satvideo.h
test/: CMakeLists.txt  README.md  signal.cpp  threadtest.mmp
test/graywin/: CMakeLists.txt  graywin.c  graywin.cue
test/helloworld/: CMakeLists.txt  helloworld.c  helloworld.cue
test/loopwave/: loopwave.c
test/testalpha/: .gitignore  CMakeLists.txt  testalpha.c  testalpha.cue
test/testbitmap/: CMakeLists.txt  testbitmap.c  testbitmap.cue
test/testcdrom/: CMakeLists.txt  testcdrom.c  testcdrom.cue
test/testerror/: CMakeLists.txt  testerror.c  testerror.cue
test/testgamma/: CMakeLists.txt  testgamma.c  testgamma.cue
test/testjoystick/: CMakeLists.txt  testjoystick.c  testjoystick.cue
test/testkeys/: CMakeLists.txt  testkeys.c  testkeys.cue
test/testpalette/: CMakeLists.txt  testpalette.c  testpalette.cue
test/testsprite/: CMakeLists.txt  testsprite.c  testsprite.cue
test/testtimer/: CMakeLists.txt  testtimer.c  testtimer.cue
test/testtypes/: CMakeLists.txt  testtypes.c  testtypes.cue
test/testver/: CMakeLists.txt  testver.c
test/testvidinfo/: CMakeLists.txt  testvidinfo.c  testvidinfo.cue
test/testwin/: CMakeLists.txt  testwin.c  testwin.cue
